[gd_scene load_steps=6 format=3 uid="uid://bhn5u31cof1b5"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_53icy"]
[ext_resource type="Texture2D" uid="uid://ddi4bywttls17" path="res://Assets/white square.png" id="2_ts8gq"]
[ext_resource type="PackedScene" uid="uid://c24l8tln4gw5f" path="res://Scenes/settings.tscn" id="3_bxgd7"]
[ext_resource type="PackedScene" uid="uid://lpks6u5yssay" path="res://Scenes/arrow.tscn" id="3_tpsix"]
[ext_resource type="PackedScene" uid="uid://2u6d14sfnj7" path="res://sounds/menu_music.tscn" id="5_t58bw"]

[node name="Main Menu" type="Node2D"]
process_mode = 3
texture_filter = 1
script = ExtResource("1_53icy")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.0627451, 0.309804, 0.396078, 1)
z_index = -10
position = Vector2(360, 204)
scale = Vector2(80, 45.3333)
texture = ExtResource("2_ts8gq")

[node name="Menu" type="Node2D" parent="."]
process_mode = 1

[node name="Start" type="Button" parent="Menu"]
offset_left = 64.0
offset_top = 176.0
offset_right = 240.0
offset_bottom = 208.0
text = "Start"

[node name="Settings" type="Button" parent="Menu"]
offset_left = 64.0
offset_top = 232.0
offset_right = 240.0
offset_bottom = 264.0
text = "Options"

[node name="Keybinds" type="Button" parent="Menu"]
offset_left = 64.0
offset_top = 288.0
offset_right = 240.0
offset_bottom = 320.0
text = "Keybinds"

[node name="Exit" type="Button" parent="Menu"]
offset_left = 64.0
offset_top = 344.0
offset_right = 240.0
offset_bottom = 376.0
text = "Exit"

[node name="Arrow" parent="Menu" instance=ExtResource("3_tpsix")]
position = Vector2(256, 184)

[node name="Settings" parent="." instance=ExtResource("3_bxgd7")]
z_index = 3

[node name="Menu Music" parent="." instance=ExtResource("5_t58bw")]

[node name="Label" type="Label" parent="."]
offset_left = 168.0
offset_top = 24.0
offset_right = 696.0
offset_bottom = 119.0
text = "Proiect atestat clasa a 12-a 2023

Cristea Darius Emanuel

 12 B CNNT Pucioasa"
horizontal_alignment = 2

[node name="High Score" type="Label" parent="."]
offset_left = 40.0
offset_top = 128.0
offset_right = 280.0
offset_bottom = 147.0
text = "High Score: 123"

[connection signal="mouse_entered" from="Menu/Start" to="." method="_on_start_mouse_entered"]
[connection signal="pressed" from="Menu/Start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="Menu/Settings" to="." method="_on_settings_mouse_entered"]
[connection signal="pressed" from="Menu/Settings" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="Menu/Keybinds" to="." method="_on_keybinds_mouse_entered"]
[connection signal="pressed" from="Menu/Keybinds" to="." method="_on_keybinds_pressed"]
[connection signal="mouse_entered" from="Menu/Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="Menu/Exit" to="." method="_on_exit_pressed"]
[connection signal="visibility_changed" from="Settings" to="." method="_on_settings_visibility_changed"]
